--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,24 @@
+# =========================================================================================================
+# APPLICATION CONFIG
+# =========================================================================================================
+spring.application.name=Test-Sample
+spring.profiles.active=local
+server.servlet.context-path=/api/v1
+server.port=9082
+
+# =================================================
+# DEVTOOLS (DevToolsProperties)
+# =================================================
+spring.devtools.livereload.enabled=true
+spring.devtools.restart.enabled=true
+
+#====================================================
+# JACKSON
+#====================================================
+spring.jackson.serialization.FAIL_ON_EMPTY_BEANS=false
+
+# ================================================
+# = SWAGGER
+# ================================================
+spring.mvc.pathmatch.matching-strategy = ANT_PATH_MATCHER
 
